force-app/main/default/objects/Speaker__c/fields/Advisor_Engagement_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Engagement_Date_1__c</fullName>
    <description>Date of advisor engagement.</description>
    <label>Advisor Engagement Date</label>
    <type>Date</type>
</CustomField>