force-app/main/default/objects/Speaker__c/fields/Advisor_Engagement_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Engagement_Date_2__c</fullName>
    <label>Advisor Engagement Date 2</label>
    <type>Date</type>
</CustomField>