force-app/main/default/objects/Speaker__c/fields/Advisor_Engagement_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Engagement_Type_2__c</fullName>
    <label>Advisor Engagement Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Made</fullName>
            </value>
            <value>
                <fullName>To Invite</fullName>
            </value>
            <value>
                <fullName>Invite Sent</fullName>
            </value>
            <value>
                <fullName>Nudged / Followed Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>