force-app/main/default/objects/Speaker__c/fields/Bio_Received__c.field-meta.xml
<CustomField>
    <fullName>Bio_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bio Received?</label>
    <type>Checkbox</type>
</CustomField>