force-app/main/default/objects/Speaker__c/fields/Briefing_Book_Content_Description__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Book_Content_Description__c</fullName>
    <description>Have we received an article written by or about the speaker? Enter a description and/or link to the piece here.</description>
    <inlineHelpText>Have we received an article written by or about the speaker? Enter a description and/or link to the piece here.</inlineHelpText>
    <label>Briefing Book Content Description</label>
    <type>TextArea</type>
</CustomField>