force-app/main/default/objects/Speaker__c/fields/Briefing_Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Materials_Sent__c</fullName>
    <label>Briefing Materials Sent</label>
    <type>Date</type>
</CustomField>