force-app/main/default/objects/Speaker__c/fields/Coming__c.field-meta.xml
<CustomField>
    <fullName>Coming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coming?</label>
    <type>Checkbox</type>
</CustomField>