force-app/main/default/objects/Speaker__c/fields/Communicated_GT__c.field-meta.xml
<CustomField>
    <fullName>Communicated_GT__c</fullName>
    <label>Communicated GT</label>
    <type>Date</type>
</CustomField>