force-app/main/default/objects/Speaker__c/fields/Confirm_GT__c.field-meta.xml
<CustomField>
    <fullName>Confirm_GT__c</fullName>
    <label>Confirm GT #</label>
    <type>TextArea</type>
</CustomField>