force-app/main/default/objects/Speaker__c/fields/Confirmation_Letter__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Letter__c</fullName>
    <label>Confirmation Letter</label>
    <type>TextArea</type>
</CustomField>