force-app/main/default/objects/Speaker__c/fields/Contacted__c.field-meta.xml
<CustomField>
    <fullName>Contacted__c</fullName>
    <label>Contacted</label>
    <type>Date</type>
</CustomField>