force-app/main/default/objects/Speaker__c/fields/Dietary__c.field-meta.xml
<CustomField>
    <fullName>Dietary__c</fullName>
    <formula>Contact__r.Dietary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dietary</label>
    <type>Text</type>
</CustomField>