force-app/main/default/objects/Speaker__c/fields/EA__c.field-meta.xml
<CustomField>
    <fullName>EA__c</fullName>
    <description>This field pulls the name of &apos;Assistant 1&apos; from the Speaker&apos;s Contact record.</description>
    <formula>Contact__r.Assistant_1_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field pulls the name of &apos;Assistant 1&apos; from the Speaker&apos;s Contact record.</inlineHelpText>
    <label>Assistant/Contact</label>
    <type>Text</type>
</CustomField>