force-app/main/default/objects/Speaker__c/fields/Event_Member__c.field-meta.xml
<CustomField>
    <fullName>Event_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Member</label>
    <referenceTo>Event_Members__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>