force-app/main/default/objects/Speaker__c/fields/Executive_Advisor_1__c.field-meta.xml
<CustomField>
    <fullName>Executive_Advisor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Executive advisor assitance</description>
    <label>Executive Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speakers (Executive Advisor 1)</relationshipLabel>
    <relationshipName>Speakers1</relationshipName>
    <type>Lookup</type>
</CustomField>