force-app/main/default/objects/Speaker__c/fields/Executive_Advisor_2__c.field-meta.xml
<CustomField>
    <fullName>Executive_Advisor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Advisor 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speakers (Executive Advisor 2)</relationshipLabel>
    <relationshipName>Speakers2</relationshipName>
    <type>Lookup</type>
</CustomField>