force-app/main/default/objects/Speaker__c/fields/Executive_Advisor_3__c.field-meta.xml
<CustomField>
    <fullName>Executive_Advisor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Executive Advisor assistance</description>
    <label>Executive Advisor 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Speakers (Executive Advisor 3)</relationshipLabel>
    <relationshipName>Speakers3</relationshipName>
    <type>Lookup</type>
</CustomField>