force-app/main/default/objects/Speaker__c/fields/Hotel_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirm__c</fullName>
    <label>Hotel Confirm #</label>
    <type>TextArea</type>
</CustomField>