force-app/main/default/objects/Speaker__c/fields/Hotel_Other__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Other__c</fullName>
    <label>Hotel (If Other)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>