force-app/main/default/objects/Speaker__c/fields/Name_Badge__c.field-meta.xml
<CustomField>
    <fullName>Name_Badge__c</fullName>
    <label>Name Badge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>