force-app/main/default/objects/Speaker__c/fields/Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Notes_2__c</fullName>
    <label>Notes 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>