force-app/main/default/objects/Speaker__c/fields/Notes_3__c.field-meta.xml
<CustomField>
    <fullName>Notes_3__c</fullName>
    <label>Notes 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>