force-app/main/default/objects/Speaker__c/fields/Notes_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Notes_Follow_Up__c</fullName>
    <label>Notes/Follow-Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>