force-app/main/default/objects/Speaker__c/fields/Offered_GT__c.field-meta.xml
<CustomField>
    <fullName>Offered_GT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offered GT</label>
    <type>Checkbox</type>
</CustomField>