force-app/main/default/objects/Speaker__c/fields/Photo_Received__c.field-meta.xml
<CustomField>
    <fullName>Photo_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo Received?</label>
    <type>Checkbox</type>
</CustomField>