force-app/main/default/objects/Speaker__c/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSVP?</label>
    <type>Checkbox</type>
</CustomField>