force-app/main/default/objects/Speaker__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <label>Scheduled</label>
    <type>TextArea</type>
</CustomField>