force-app/main/default/objects/Speaker__c/fields/Speaker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Fee__c</fullName>
    <label>Speaker Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>