force-app/main/default/objects/Speaker__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Use this field to manage the Speaker Pipeline.</description>
    <inlineHelpText>Use this field to manage the Speaker Pipeline.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Spoke at Meeting</fullName>
            </value>
            <value>
                <fullName>To Invite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>