force-app/main/default/objects/Speaker__c/fields/Travel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Travel_Notes__c</fullName>
    <label>Travel Notes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>